# director-ai

./: .coveragerc-extras  .dockerignore  .gcloudignore  .gemini_audit_prompt.md  .gitattributes  .gitignore  .pre-commit-config.yaml  .zenodo.json  ARCHITECTURE.md  AUDIT_2026-03-11.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  CONTRIBUTORS.md  DEV_LOG.md  Dockerfile  Dockerfile.gpu  GOOD_FIRST_ISSUES.md  GOVERNANCE.md  LICENSE  MANIFEST.in  Makefile  NOTICE  NOTICE.md  PUBLIC_API.md  README.md  REUSE.toml  ROADMAP.md  SECURITY.md  SECURITY_AUDIT_PREP.md  SUPPORT.md  VALIDATION.md  _typos.toml  docker-compose.yml  fixer.py  mkdocs.yml  mypy_errors.txt  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.githooks/: pre-push
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  requirements-publish.txt  requirements-release.txt
backfire-kernel/: BENCHMARKS.md  Cargo.toml  _typos.toml
backfire-kernel/crates/backfire-consciousness/: Cargo.toml
backfire-kernel/crates/backfire-consciousness/src/: lib.rs  pgbo.rs  tcbo.rs
backfire-kernel/crates/backfire-core/: Cargo.toml
backfire-kernel/crates/backfire-core/benches/: scoring_bench.rs
backfire-kernel/crates/backfire-core/src/: bm25.rs  compute.rs  kernel.rs  knowledge.rs  lib.rs  nli.rs  pii_scan.rs  scorer.rs  signals.rs
backfire-kernel/crates/backfire-ffi/: Cargo.toml  pyproject.toml
backfire-kernel/crates/backfire-ffi/src/: lib.rs  safety_hooks.rs
backfire-kernel/crates/backfire-observers/: Cargo.toml
backfire-kernel/crates/backfire-observers/src/: lib.rs  pgbo.rs  tcbo.rs
backfire-kernel/crates/backfire-physics/: Cargo.toml
backfire-kernel/crates/backfire-physics/src/: l16_closure.rs  lib.rs  params.rs  sec_functional.rs  upde.rs
backfire-kernel/crates/backfire-ssgf/: Cargo.toml
backfire-kernel/crates/backfire-ssgf/benches/: ssgf_bench.rs
backfire-kernel/crates/backfire-ssgf/src/: costs.rs  decoder.rs  engine.rs  lib.rs  micro.rs  node_space.rs  spectral.rs
backfire-kernel/crates/backfire-types/: Cargo.toml
backfire-kernel/crates/backfire-types/src/: config.rs  error.rs  lib.rs  score.rs
backfire-kernel/crates/backfire-wasm/: Cargo.toml  README.md
backfire-kernel/crates/backfire-wasm/example/: index.html
backfire-kernel/crates/backfire-wasm/src/: lib.rs
backfire-kernel/crates/backfire-wasm/tests/: kernel.rs
benchmarks/: BENCHMARK_REPORT.md  VERTEX_RUNBOOK.md  __init__.py  _analysis_common.py  _bench_model.py  _cb_lowlr_train.py  _common.py  _judge_common.py  _load_aggrefact_patch.py  ablation_ef.py  ablation_study.py  aggrefact_ensemble.py  aggrefact_eval.py  aggrefact_minicheck.py  analyze_scores.py  anli_eval.py  claim_coverage_fpr_diag.py  cloud_setup.sh  cloudbuild.yaml  competitor_aggrefact.py  competitor_aggrefact_suite.py  deploy_judge_bench.sh  deploy_upcloud_bench.sh  dialogue_fpr_diag.py  e2e_eval.py  eval_freshqa.py  eval_halueval.py  falsepositive_eval.py  fever_eval.py  ffi_overhead_bench.py  finance_eval.py  forge_ab_results.json  freshqa_eval.py  frontier_llm_eval.py  gemma_aggrefact_cot.py  gemma_aggrefact_eval.py  gemma_aggrefact_hiss.py  gemma_aggrefact_hiss_routed.py  gemma_aggrefact_logprob.py  gemma_aggrefact_logprob_routed.py  (+50 more)
demo/: README.md  README_HF.md  app.py  push_to_hf.sh  requirements.txt  streaming_halt_live.py
director_guard/: README.md  config.yaml  facts.txt  guard.py
discord-bot/: Dockerfile  bot.py  embeds.py  pyproject.toml  requirements.txt  setup_guide.md
docs/: API_REFERENCE.md  BACKFIRE_PREVENTION_PROTOCOLS.md  BENCHMARKS.md  BUILD_JUDGE_DATASET.md  DATA_PIPELINE.md  E2E_EVAL.md  JUDGE_BENCHMARK.md  LAUNCH_POSTS.md  PRODUCTION_CHECKLIST.md  REFINEMENT_SUMMARY_2025.md  RESEARCH.md  RESEARCH_GUIDE.md  ROADMAP_2026_2027.md  RUST_FFI_PIPELINE.md  SIEVING.md  STRANGE_LOOP_THEORY_EXPLAINED.md  TECHNICAL_SPEC_V2.md  conf.py  index.rst
docs-site/: benchmarks.md  changelog.md  glossary.md  index.md  installation.md  licensing.md  pitch.html  privacy.md  quickstart.md  tutorials.md
examples/: compliance_report_demo.py  custom_rust_scorer.py  customer_pilot.py  customer_support_guard.py  demo_script.py  evidence_inspection_demo.py  graceful_fallbacks.py  injection_detection_demo.py  json_verification_demo.py  langchain_guard.py  medical_guard.py  ollama_guard.py  online_calibration_demo.py  openai_guard.py  pilot_onboarding.py  quickstart.py  rag_population.py  scoring_modes_demo.py  sdk_guard_demo.py  streaming_demo.py  streaming_halt_demo.py  superiority_demo.py  tool_call_verification_demo.py  verification_gems_demo.py  voice_elevenlabs.py  voice_openai_tts.py  voice_streaming_demo.py  voice_twilio_webhook.py
formal/: README.md
gpu_deploy/: aggrefact_pipeline.sh  distillation_master.sh  download_results.sh  master_runner.sh  master_runner_v2.sh  merge_lora.py  modernbert_master.sh  monitor.sh  pack.sh  pack_modernbert.sh  provision_distillation.sh  requirements_gpu.txt  requirements_modernbert.txt  run_evals.sh  run_pipeline_v2.sh  setup_instance.sh  setup_modernbert.sh
notebooks/: 01_coherence_engine.ipynb  02_streaming_oversight.ipynb  03_vector_store.ipynb  04_end_to_end_benchmark.ipynb  04_physics_bridge.ipynb  05_ssgf_geometry.ipynb  06_lyapunov_proofs.ipynb  06_medical_rag_chatbot.ipynb  07_langchain_integration.ipynb  08_provider_adapters.ipynb  09_production_guardrails.ipynb  10_vector_rag_pipeline.ipynb  11_streaming_halt_deep_dive.ipynb  12_domain_presets_and_config.ipynb  13_batch_processing_and_evaluation.ipynb  14_enterprise_multi_tenant.ipynb  15_custom_fine_tuning.ipynb  16_verification_gems.ipynb  colab_streaming_halt_demo.ipynb  quickstart.ipynb
proto/: director.proto
requirements/: ci-audit.txt  ci-build.txt  ci-dev.txt  ci-docs.txt  ci-fuzz.txt  ci-lint.txt  ci-release.in  ci-release.txt  ci-sast.txt  ci-sbom.txt  ci-types.txt  docker-gpu-export.txt  docker-gpu.txt  docker-server.txt
schemas/: README.md  generate.sh
scripts/: gen_proto.sh
src/: __init__.py  actor_module.py  backfire_kernel.py  director_module.py  knowledge_base.py  strange_loop_agent.py
(+942 files in other folders)
