[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "director-ai"
version = "1.8.0"
description = "Real-time LLM hallucination guardrail — NLI + RAG fact-checking with token-level streaming halt"
authors = [
    {name = "Miroslav Sotek", email = "protoscience@anulum.li"}
]
license = {text = "AGPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.24",
    "requests>=2.28",
]

[project.optional-dependencies]
nli = [
    "torch>=2.0",
    "transformers>=4.30",
]
vector = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.20"]
langchain = [
    "langchain-core>=0.1",
]
llamaindex = [
    "llama-index-core>=0.10",
]
server = [
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "pydantic>=2.0",
]
ratelimit = [
    "slowapi>=0.1.9",
]
minicheck = [
    "minicheck>=0.1",
]
onnx = [
    "onnxruntime>=1.15",
]
quantize = [
    "bitsandbytes>=0.41",
    "accelerate>=0.21",
]
reranker = [
    "sentence-transformers>=2.2.0",
]
embeddings = [
    "sentence-transformers>=2.2.0",
]
langgraph = [
    "langgraph>=0.2",
]
haystack = [
    "haystack-ai>=2.0",
]
crewai = [
    "crewai>=0.50",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
]
research = []
train = [
    "transformers>=4.30",
    "datasets>=2.14",
    "accelerate>=0.21",
    "peft>=0.6",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.5,<1",
    "mypy>=1.10",
    "pyyaml>=6.0",
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "sphinx-autodoc-typehints>=1.25",
    "build>=1.0",
    "twine>=5.0",
]

[project.scripts]
director-ai = "director_ai.cli:main"

[project.urls]
Homepage = "https://www.anulum.li"
Repository = "https://github.com/anulum/director-ai"
Issues = "https://github.com/anulum/director-ai/issues"
Changelog = "https://github.com/anulum/director-ai/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
markers = [
    "consumer: consumer-facing API tests",
    "integration: cross-module integration tests",
    "slow: tests that take > 5s",
]

[tool.coverage.run]
source = ["src/director_ai"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 60
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "pass",
    "raise NotImplementedError",
    "except ImportError",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "benchmarks.*"
ignore_errors = true
