# SPDX-License-Identifier: AGPL-3.0-or-later
# Commercial license available
# © Concepts 1996–2026 Miroslav Šotek. All rights reserved.
# © Code 2020–2026 Miroslav Šotek. All rights reserved.
# ORCID: 0009-0009-3560-0851
# Contact: www.anulum.li | protoscience@anulum.li
# Director-Class AI — Project Configuration

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "director-ai"
version = "3.12.0"
description = "Real-time LLM hallucination guardrail — NLI + RAG fact-checking with token-level streaming halt"
authors = [
    {name = "Miroslav Šotek", email = "protoscience@anulum.li"}
]
license = {text = "AGPL-3.0-or-later"}
readme = "README.md"
requires-python = ">=3.11"
keywords = [
    "llm", "hallucination", "guardrail", "nli", "rag",
    "fact-checking", "streaming", "coherence", "deberta",
    "openai", "anthropic", "langchain",
]
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.24",
    "requests>=2.32",
]

[project.optional-dependencies]
nli = [
    "torch>=2.0,<3",
    "transformers>=4.30,<5",
]
vector = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2,<4",
]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.20"]
langchain = [
    "langchain-core>=0.3",
]
llamaindex = [
    "llama-index-core>=0.10",
]
server = [
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "pydantic>=2.0",
    "httpx>=0.27",
    "python-multipart>=0.0.7",
    "slowapi>=0.1.9",
]
minicheck = [
    "minicheck>=0.1",
]
voice = [
    "elevenlabs>=1.0",
    "openai>=1.0",
    "deepgram-sdk>=3.0",
]
onnx = [
    "onnxruntime>=1.15,<2",
]
tensorrt = [
    "onnxruntime-gpu>=1.15,<2",
]
grpc = [
    "grpcio>=1.60",
    "grpcio-tools>=1.60",
    "protobuf>=4.25",
]
finetune = [
    "torch>=2.0,<3",
    "transformers>=4.30,<5",
    "datasets>=2.14",
    "accelerate>=0.21",
    "scikit-learn>=1.3",
]
quantize = [
    "bitsandbytes>=0.41",
    "accelerate>=0.21",
]
pinecone = ["pinecone>=5.0"]
weaviate = ["weaviate-client>=4.0"]
qdrant = ["qdrant-client>=1.7"]
faiss = ["faiss-cpu>=1.7"]
elasticsearch = ["elasticsearch>=8.0,<9"]
reranker = [
    "sentence-transformers>=2.2,<4",
]
embeddings = [
    "sentence-transformers>=2.2,<4",
]
embed = [
    "sentence-transformers>=2.2,<4",
]
nli-lite = [
    "onnxruntime>=1.15,<2",
    "transformers>=4.30",
]
langgraph = [
    "langgraph>=0.2",
]
haystack = [
    "haystack-ai>=2.0",
]
crewai = [
    "crewai>=0.50",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
    "mkdocs-jupyter>=0.25",
]
otel = [
    "opentelemetry-api>=1.20",
]
ingestion = [
    "pypdf>=3.0",
    "python-docx>=1.0",
    "beautifulsoup4>=4.12",
]
colbert = [
    "ragatouille>=0.0.8",
]
rust = ["backfire-kernel>=0.1.0"]
enterprise = [
    "redis>=4.5",
    "pyjwt>=2.8",
    "argon2-cffi>=23.1",
    "psycopg2-binary>=2.9",
]
research = []
train = [
    "transformers>=4.30",
    "datasets>=2.14",
    "accelerate>=0.21",
    "peft>=0.6",
]
security = [
    "cyclonedx-bom>=4.0",
    "hypothesis>=6.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.5,<1",
    "mypy>=1.10",
    "types-requests>=2.31",
    "types-PyYAML>=6.0",
    "bandit>=1.7",
    "pyyaml>=6.0",
    "build>=1.0",
    "twine>=5.0",
    "fastapi>=0.100",
    "httpx>=0.27",
    "pydantic>=2.0",
    "python-multipart>=0.0.7",
]

[project.scripts]
director-ai = "director_ai.cli:main"

[project.entry-points."director_ai.backends"]
deberta = "director_ai.core.scoring.backends:DeBERTaBackend"
onnx = "director_ai.core.scoring.backends:OnnxBackend"
minicheck = "director_ai.core.backends:MiniCheckBackend"
lite = "director_ai.core.backends:LiteBackend"
rules = "director_ai.core.scoring.backends:RulesBackendWrapper"
embed = "director_ai.core.scoring.backends:EmbedBackendWrapper"
nli-lite = "director_ai.core.scoring.backends:DistilledNLIBackendWrapper"
rust = "director_ai.core.backends:RustBackend"
backfire = "director_ai.core.backends:RustBackend"

[project.entry-points."director_ai.vector_backends"]
memory = "director_ai.core.vector_store:InMemoryBackend"

[project.urls]
Homepage = "https://www.anulum.li"
Repository = "https://github.com/anulum/director-ai"
Issues = "https://github.com/anulum/director-ai/issues"
Changelog = "https://github.com/anulum/director-ai/blob/main/CHANGELOG.md"
Documentation = "https://anulum.github.io/director-ai"
Discussions = "https://discord.gg/JvMdKv49"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
director_ai = ["core/models/*.pkl"]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["src/director_ai/director_pb2.py", "src/director_ai/director_pb2_grpc.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/director_ai/__init__.py" = ["F401"]
"notebooks/*.ipynb" = ["N802", "N803", "N806", "B007", "SIM108", "F401", "I001"]
"tests/test_coverage_*.py" = ["N801", "N806", "SIM117", "B018"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
markers = [
    "consumer: consumer-facing API tests",
    "integration: cross-module integration tests",
    "slow: tests that take > 5s",
    "enterprise: enterprise module tests (tenant, policy, audit)",
]

[tool.coverage.run]
source = ["src/director_ai"]
branch = true
omit = [
    "src/director_ai/grpc_server.py",       # requires [grpc] extras (grpcio)
    "src/director_ai/director_pb2.py",      # generated protobuf stubs
    "src/director_ai/director_pb2_grpc.py", # generated gRPC stubs
    "src/director_ai/enterprise/*",         # requires [enterprise] extras (Redis)
    "src/director_ai/core/finetune.py",     # requires [nli] extras (torch)
    "src/director_ai/core/finetune_benchmark.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 90
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "pass",
    "raise NotImplementedError",
    "except ImportError",
]
partial_branches = [
    "pragma: no branch",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "director_ai.voice.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.bandit]
exclude_dirs = ["tests", "benchmarks"]
# B101: assert used in tests only (excluded above)
# B104: 0.0.0.0 binding — intentional for Docker/container deployment
# B311: random — used for non-security purposes (sampling, not crypto)
# B608: SQL formatting — parameterized queries used in audit_pg.py
# B615: pyrsa — not used; false positive from dep chain
skips = ["B101", "B104", "B311", "B608", "B615"]

[[tool.mypy.overrides]]
module = "director_ai.director_pb2"
ignore_errors = true

[[tool.mypy.overrides]]
module = "director_ai.director_pb2_grpc"
ignore_errors = true

[[tool.mypy.overrides]]
module = "director_ai.enterprise.redis"
ignore_errors = true

[[tool.mypy.overrides]]
module = "benchmarks.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
