# SPDX-License-Identifier: AGPL-3.0-or-later
# Commercial license available
# © Concepts 1996–2026 Miroslav Šotek. All rights reserved.
# © Code 2020–2026 Miroslav Šotek. All rights reserved.
# ORCID: 0009-0009-3560-0851
# Contact: www.anulum.li | protoscience@anulum.li
# Director-Class AI — Cargo
# ─────────────────────────────────────────────────────────────────────
# Director-Class AI — Backfire Kernel (Rust)
# (C) 1998-2026 Miroslav Šotek. All rights reserved.
# License: GNU AGPL v3 | Commercial licensing available
# ─────────────────────────────────────────────────────────────────────

[workspace]
members = [
    "crates/backfire-types",
    "crates/backfire-core",
    "crates/backfire-physics",
    "crates/backfire-observers",
    "crates/backfire-ssgf",
    "crates/backfire-ffi",
    "crates/backfire-wasm",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
authors = ["Miroslav Šotek <protoscience@anulum.li>"]
license = "AGPL-3.0-or-later"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"
parking_lot = "0.12"
pyo3 = { version = "0.24", features = ["extension-module"] }
regex = "1.11"
once_cell = "1.20"
sha2 = "0.10"
hmac = "0.12"

[workspace.dependencies.criterion]
version = "0.5"

[workspace.lints.clippy]
# 2D array indexing with for n/m loops is idiomatic in physics code
needless_range_loop = "allow"
# Tests construct configs with Default then override fields
field_reassign_with_default = "allow"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
