# SPDX-License-Identifier: AGPL-3.0-or-later | Commercial license available
# © Concepts 1996–2026 Miroslav Šotek. All rights reserved.
# © Code 2020–2026 Miroslav Šotek. All rights reserved.
# ORCID: 0009-0009-3560-0851
# Contact: www.anulum.li | protoscience@anulum.li
# Director-Class AI — Cargo
[package]
name = "backfire-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Director-Class AI Backfire Kernel — scoring engine, token gating, safety kernel"

[dependencies]
backfire-types = { path = "../backfire-types" }
log = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
env_logger = { workspace = true }

[[bench]]
name = "scoring_bench"
harness = false

[lints]
workspace = true
