[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "backfire-kernel"
version = "0.1.0"
description = "Director-Class AI — Rust Backfire Kernel (50ms safety gate)"
authors = [{name = "Miroslav Sotek", email = "protoscience@anulum.li"}]
requires-python = ">=3.10"
license = {text = "AGPL-3.0-or-later"}

[tool.maturin]
features = ["pyo3/extension-module"]
