[package]
name = "backfire-observers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Director-Class AI — TCBO boundary observer + PGBO bridge operator"

[dependencies]
backfire-types = { path = "../backfire-types" }
serde = { workspace = true }
log = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }

[lints]
workspace = true
