# SPDX-License-Identifier: AGPL-3.0-or-later | Commercial license available
# © Concepts 1996–2026 Miroslav Šotek. All rights reserved.
# © Code 2020–2026 Miroslav Šotek. All rights reserved.
# ORCID: 0009-0009-3560-0851
# Contact: www.anulum.li | protoscience@anulum.li
# Director-Class AI — Cargo
[package]
name = "backfire-observers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Director-Class AI — TCBO boundary observer + PGBO bridge operator"

[dependencies]
backfire-types = { path = "../backfire-types" }
serde = { workspace = true }
log = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }

[lints]
workspace = true
