[package]
name = "backfire-ssgf"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Director-Class AI Backfire Kernel — SSGF geometry engine"

[dependencies]
backfire-types = { path = "../backfire-types" }
backfire-physics = { path = "../backfire-physics" }
backfire-observers = { path = "../backfire-observers" }
serde = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "ssgf_bench"
harness = false

[lints]
workspace = true
