[package]
name = "backfire-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "WebAssembly bindings for the Director-Class AI Backfire Kernel"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
backfire-types = { path = "../backfire-types" }
backfire-core = { path = "../backfire-core" }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { workspace = true }
serde-wasm-bindgen = "0.6"
